# abc_atlas_access

./: .buildinfo  .gitignore  LICENSE  README.md  _config.yml  _toc.yml  genindex.html  intro.html  intro.md  junk.txt  objects.inv  pyproject.toml  requirements.txt  search.html  searchindex.js
_sources/: intro.md
abc_atlas_workshop/: demo_abc_atlas_selection.csv  getting_started.ipynb  workshop_demo.ipynb
descriptions/: 10x_snRNASeq-tutorial.md  ASAP-PMDBS-10X.html  ASAP-PMDBS-10X.md  ASAP-PMDBS-MapMyCells.html  ASAP-PMDBS-MapMyCells.md  ASAP-PMDBS_dataset.html  ASAP-PMDBS_dataset.md  ASAP-PMDBS_notebooks.html  ASAP-PMDBS_notebooks.md  Allen-CCF-2020.html  Allen-CCF-2020.md  Consensus-Mouse-10X.md  Consensus-Mouse-dataset.md  Consensus-Mouse-notebooks.md  Consensus-Mouse-taxonomy.md  Consensus-WMB-10X.html  Consensus-WMB-10X.md  Consensus-WMB-dataset.html  Consensus-WMB-dataset.md  Consensus-WMB-notebooks.html  Consensus-WMB-taxonomy.html  Consensus-WMB-taxonomy.md  Dev-Mouse-Vis-Cortex-10X.html  Dev-Mouse-Vis-Cortex-10X.md  Dev-Mouse-Vis-Cortex-dataset.html  Dev-Mouse-Vis-Cortex-dataset.md  Dev-Mouse-Vis-Cortex-notebooks.html  Dev-Mouse-Vis-Cortex-notebooks.md  Dev-Mouse-Vis-Cortex-taxonomy.html  Dev-Mouse-Vis-Cortex-taxonomy.md  HMBA-10XMultiome-BG-Aligned.html  HMBA-10XMultiome-BG-Aligned.md  HMBA-10XMultiome-BG.html  HMBA-10XMultiome-BG.md  HMBA-BG-taxonomy-CCN20250428.html  HMBA-BG-taxonomy-CCN20250428.md  HMBA-BG_dataset.html  HMBA-BG_dataset.md  HMBA-BG_notebooks.html  HMBA-BG_notebooks.md  (+65 more)
docs/: README.html  README.md
notebooks/: 10x_snRNASeq_tutorial_part_1.html  10x_snRNASeq_tutorial_part_1.ipynb  10x_snRNASeq_tutorial_part_2a.html  10x_snRNASeq_tutorial_part_2a.ipynb  10x_snRNASeq_tutorial_part_2b.html  10x_snRNASeq_tutorial_part_2b.ipynb  10x_snRNASeq_tutorial_part_2c.ipynb  SEAAD-10X_tutorial.ipynb  SEAAD-taxonomy_tutorial.ipynb  TDB-10x_snRNASeq_tutorial.ipynb  WHB-10x_snRNASeq_tutorial_part_1.html  WHB-10x_snRNASeq_tutorial_part_1.ipynb  WHB-10x_snRNASeq_tutorial_part_2.html  WHB-10x_snRNASeq_tutorial_part_2.ipynb  WHB_cluster_annotation_tutorial.html  WHB_cluster_annotation_tutorial.ipynb  aging_mouse.ipynb  (+51 more)
(+194 files in other folders)
