[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "abc_atlas_access"
version = "0.1.2"
description = "A package for accessing/processing data from the ABC Atlas"
dependencies = [
  "anndata",
  "boto3",
  "ghp-import",
  "matplotlib",
  "moto",
  "numpy",
  "pandas",
  "pydantic",
  "pytest",
  "requests",
  "scipy",
  "SimpleITK",
  "tqdm",
]
requires-python = ">=3.8"
authors = [
  {name = "Christopher Morrison", email = "chris.morrison@allenintitute.org"},
]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python"
]
