[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "abc_atlas_access"
version = "0.7.0"
description = "A package for accessing/processing data from the ABC Atlas"
dependencies = [
  "anndata",
  "boto3",
  "numpy",
  "pandas",
  "pydantic",
  "tqdm"
]
requires-python = ">=3.8"
authors = [
  {name = "Christopher Morrison", email = "chris.morrison@allenintitute.org"},
]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python"
]

[project.optional-dependencies]
notebooks = [
    "geojson",
    "matplotlib",
    "scipy",
    "SimpleITK"
]
jupyter-book = [
    "ghp-import",
    "jupyter-book"
]
test = [
    "moto",
    "pytest"
]
